fix misaligned subnavigation

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -45,7 +45,7 @@ nav.performance-nav {
   ul {
     list-style:none;
     padding: 0 0 0 33.33%;
-    margin: 0 0 0.5em 0;
+    margin: 0 0 0.5em 0.3em;
 
     li {
       display:inline-block;
